<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aladin"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/heading"
                android:textAlignment="center"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="10dp"
                app:srcCompat="@android:drawable/btn_star" />

            <TextView
                android:id="@+id/intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chicle"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/intro"
                android:textAlignment="center"
                android:textSize="35sp" />

            <Button
                android:id="@+id/btnProceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/btnItemL"
                android:textColor="#8B4513"
                app:backgroundTint="#FFC0CB" />

            <Button
                android:id="@+id/btnGH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/btnGitHub"
                android:textColor="#000000"
                app:backgroundTint="#F0F8FF" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>